force-app/main/default/objects/ServiceContractNewMatter__c/ServiceContractNewMatter__c.object-meta.xml
<CustomObject>
    <label>サービス_新規</label>
    <nameField>
        <label>サービス契約_新規名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>