force-app/main/default/objects/ServiceContractNewMatter__c/fields/AcceptContactMemoGenerally__c.field-meta.xml
<CustomField>
    <fullName>AcceptContactMemoGenerally__c</fullName>
    <label>受付連絡メモ通常</label>
    <length>255</length>
    <type>Text</type>
</CustomField>