force-app/main/default/objects/ServiceContractNewMatter__c/fields/AcceptContactMemoUnnecessary__c.field-meta.xml
<CustomField>
    <fullName>AcceptContactMemoUnnecessary__c</fullName>
    <label>受付連絡メモ不要</label>
    <length>255</length>
    <type>Text</type>
</CustomField>