force-app/main/default/objects/ServiceContractNewMatter__c/fields/AcceptSecondaryCheckerCorrespondence__c.field-meta.xml
<CustomField>
    <fullName>AcceptSecondaryCheckerCorrespondence__c</fullName>
    <label>受付二次チェック者対応</label>
    <length>255</length>
    <type>Text</type>
</CustomField>