force-app/main/default/objects/ServiceContractNewMatter__c/fields/AntisocialArticleCorrespondenceNew__c.field-meta.xml
<CustomField>
    <fullName>AntisocialArticleCorrespondenceNew__c</fullName>
    <label>反社条文対応_新規</label>
    <length>255</length>
    <type>Text</type>
</CustomField>