force-app/main/default/objects/ServiceContractNewMatter__c/fields/ApplicantSendDocumentComment__c.field-meta.xml
<CustomField>
    <fullName>ApplicantSendDocumentComment__c</fullName>
    <label>適用者送付書コメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>