force-app/main/default/objects/ServiceContractNewMatter__c/fields/ApplicationFormRequestDestination__c.field-meta.xml
<CustomField>
    <fullName>ApplicationFormRequestDestination__c</fullName>
    <label>申請書依頼先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>