force-app/main/default/objects/ServiceContractNewMatter__c/fields/ApplicationMethod__c.field-meta.xml
<CustomField>
    <fullName>ApplicationMethod__c</fullName>
    <label>SNTへの申請方法</label>
    <length>255</length>
    <type>Text</type>
</CustomField>