force-app/main/default/objects/ServiceContractNewMatter__c/fields/ArrangeOperationMemoDisplayUse__c.field-meta.xml
<CustomField>
    <fullName>ArrangeOperationMemoDisplayUse__c</fullName>
    <label>手配業務メモ_表示用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>