force-app/main/default/objects/ServiceContractNewMatter__c/fields/ArrangeRuleContent__c.field-meta.xml
<CustomField>
    <fullName>ArrangeRuleContent__c</fullName>
    <label>手配ルール内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>