force-app/main/default/objects/ServiceContractNewMatter__c/fields/ArticleNegotiationWording__c.field-meta.xml
<CustomField>
    <fullName>ArticleNegotiationWording__c</fullName>
    <label>条文交渉シート文言</label>
    <length>255</length>
    <type>Text</type>
</CustomField>