force-app/main/default/objects/ServiceContractNewMatter__c/fields/AtApprovalContactMatterTrader__c.field-meta.xml
<CustomField>
    <fullName>AtApprovalContactMatterTrader__c</fullName>
    <label>承認時連絡事項業者宛</label>
    <length>255</length>
    <type>Text</type>
</CustomField>