force-app/main/default/objects/ServiceContractNewMatter__c/fields/AtApprovalContactTraderNote__c.field-meta.xml
<CustomField>
    <fullName>AtApprovalContactTraderNote__c</fullName>
    <label>承認時連絡事項業者宛フリー欄</label>
    <length>255</length>
    <type>Text</type>
</CustomField>