force-app/main/default/objects/ServiceContractNewMatter__c/fields/AtContractPleaseTitle1__c.field-meta.xml
<CustomField>
    <fullName>AtContractPleaseTitle1__c</fullName>
    <label>契約時お願いタイトル1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>