force-app/main/default/objects/ServiceContractNewMatter__c/fields/AtContractPleaseTitle2__c.field-meta.xml
<CustomField>
    <fullName>AtContractPleaseTitle2__c</fullName>
    <label>契約時お願いタイトル2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>