force-app/main/default/objects/ServiceContractNewMatter__c/fields/AtMediationIrregularProcess__c.field-meta.xml
<CustomField>
    <fullName>AtMediationIrregularProcess__c</fullName>
    <label>斡旋時イレギュラー処理</label>
    <length>255</length>
    <type>Text</type>
</CustomField>