force-app/main/default/objects/ServiceContractNewMatter__c/fields/AtMediationSecondaryCheck__c.field-meta.xml
<CustomField>
    <fullName>AtMediationSecondaryCheck__c</fullName>
    <label>斡旋時2次チェック</label>
    <length>255</length>
    <type>Text</type>
</CustomField>