force-app/main/default/objects/ServiceContractNewMatter__c/fields/BreadthRegulationManual__c.field-meta.xml
<CustomField>
    <fullName>BreadthRegulationManual__c</fullName>
    <label>広さ規定あんちょこ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>