force-app/main/default/objects/ServiceContractNewMatter__c/fields/BundleContractChangeUseNote__c.field-meta.xml
<CustomField>
    <fullName>BundleContractChangeUseNote__c</fullName>
    <label>名変社員案内書_一括名変用_フリーコメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>