force-app/main/default/objects/ServiceContractNewMatter__c/fields/CableTV__c.field-meta.xml
<CustomField>
    <fullName>CableTV__c</fullName>
    <label>ケーブルTV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>