force-app/main/default/objects/ServiceContractNewMatter__c/fields/CableTVSymbol__c.field-meta.xml
<CustomField>
    <fullName>CableTVSymbol__c</fullName>
    <label>ケーブルTV記号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>