force-app/main/default/objects/ServiceContractNewMatter__c/fields/CancelConfirmMessage__c.field-meta.xml
<CustomField>
    <fullName>CancelConfirmMessage__c</fullName>
    <label>解約確認メッセージ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>