force-app/main/default/objects/ServiceContractNewMatter__c/fields/CancelNoteMatter__c.field-meta.xml
<CustomField>
    <fullName>CancelNoteMatter__c</fullName>
    <label>解約発注時注意事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>