force-app/main/default/objects/ServiceContractNewMatter__c/fields/CancelNoticeBylawComment__c.field-meta.xml
<CustomField>
    <fullName>CancelNoticeBylawComment__c</fullName>
    <label>解約予告内規コメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>