force-app/main/default/objects/ServiceContractNewMatter__c/fields/CancelNoticeSymbol__c.field-meta.xml
<CustomField>
    <fullName>CancelNoticeSymbol__c</fullName>
    <label>解約予告記号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>