force-app/main/default/objects/ServiceContractNewMatter__c/fields/CancelRule__c.field-meta.xml
<CustomField>
    <fullName>CancelRule__c</fullName>
    <label>解約ルール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>