force-app/main/default/objects/ServiceContractNewMatter__c/fields/ChangeBylawComment__c.field-meta.xml
<CustomField>
    <fullName>ChangeBylawComment__c</fullName>
    <label>入替え内規コメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>