force-app/main/default/objects/ServiceContractNewMatter__c/fields/ChangeSymbol__c.field-meta.xml
<CustomField>
    <fullName>ChangeSymbol__c</fullName>
    <label>入替え記号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>