force-app/main/default/objects/ServiceContractNewMatter__c/fields/ChargeTeam2__c.field-meta.xml
<CustomField>
    <fullName>ChargeTeam2__c</fullName>
    <label>担当チーム２</label>
    <length>255</length>
    <type>Text</type>
</CustomField>