force-app/main/default/objects/ServiceContractNewMatter__c/fields/CommonArrangeRule__c.field-meta.xml
<CustomField>
    <fullName>CommonArrangeRule__c</fullName>
    <label>手配ルール共通</label>
    <length>255</length>
    <type>Text</type>
</CustomField>