force-app/main/default/objects/ServiceContractNewMatter__c/fields/CompanyDataMemo__c.field-meta.xml
<CustomField>
    <fullName>CompanyDataMemo__c</fullName>
    <label>企業データメモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>