force-app/main/default/objects/ServiceContractNewMatter__c/fields/CompanyReasonsAnnouncementNoteUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>CompanyReasonsAnnouncementNoteUpdateDate__c</fullName>
    <label>アナウンス時注意事項会社都合更新日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>