force-app/main/default/objects/ServiceContractNewMatter__c/fields/CompanyReasonsRequire__c.field-meta.xml
<CustomField>
    <fullName>CompanyReasonsRequire__c</fullName>
    <label>会社都合都合要件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>