force-app/main/default/objects/ServiceContractNewMatter__c/fields/CompanyReasonsRequirement__c.field-meta.xml
<CustomField>
    <fullName>CompanyReasonsRequirement__c</fullName>
    <label>都合要件会社都合</label>
    <length>255</length>
    <type>Text</type>
</CustomField>