force-app/main/default/objects/ServiceContractNewMatter__c/fields/CompanyStaffCharacteristic__c.field-meta.xml
<CustomField>
    <fullName>CompanyStaffCharacteristic__c</fullName>
    <label>企業担当者特性</label>
    <length>255</length>
    <type>Text</type>
</CustomField>