force-app/main/default/objects/ServiceContractNewMatter__c/fields/ConclusionNote__c.field-meta.xml
<CustomField>
    <fullName>ConclusionNote__c</fullName>
    <label>締結画面注意事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>