force-app/main/default/objects/ServiceContractNewMatter__c/fields/ConfirmDocumentMemo__c.field-meta.xml
<CustomField>
    <fullName>ConfirmDocumentMemo__c</fullName>
    <label>ご確認書メモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>