force-app/main/default/objects/ServiceContractNewMatter__c/fields/ContractCorrectionPart__c.field-meta.xml
<CustomField>
    <fullName>ContractCorrectionPart__c</fullName>
    <label>契約書訂正箇所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>