force-app/main/default/objects/ServiceContractNewMatter__c/fields/ContractDateStartRegulation__c.field-meta.xml
<CustomField>
    <fullName>ContractDateStartRegulation__c</fullName>
    <label>契約日開始規定</label>
    <length>255</length>
    <type>Text</type>
</CustomField>