force-app/main/default/objects/ServiceContractNewMatter__c/fields/ContractMoneyBylawComment__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBylawComment__c</fullName>
    <label>契約金内規コメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>