force-app/main/default/objects/ServiceContractNewMatter__c/fields/ContractorChangeRequestForm__c.field-meta.xml
<CustomField>
    <fullName>ContractorChangeRequestForm__c</fullName>
    <label>名義変更締結依頼書帳票名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>