force-app/main/default/objects/ServiceContractNewMatter__c/fields/ContractStorageReminderFirstAddDays__c.field-meta.xml
<CustomField>
    <fullName>ContractStorageReminderFirstAddDays__c</fullName>
    <label>締結書類保管督促後の初回督促までの日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>