force-app/main/default/objects/ServiceContractNewMatter__c/fields/ContractUnavailableRealEstate__c.field-meta.xml
<CustomField>
    <fullName>ContractUnavailableRealEstate__c</fullName>
    <label>契約不可物件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>