force-app/main/default/objects/ServiceContractNewMatter__c/fields/ContractUnavailableTermsReceiveCall__c.field-meta.xml
<CustomField>
    <fullName>ContractUnavailableTermsReceiveCall__c</fullName>
    <label>契約不可条件_受電</label>
    <length>255</length>
    <type>Text</type>
</CustomField>