force-app/main/default/objects/ServiceContractNewMatter__c/fields/CostPay24HoursSupportBilling__c.field-meta.xml
<CustomField>
    <fullName>CostPay24HoursSupportBilling__c</fullName>
    <label>費用負担_24時間サポート_請求</label>
    <length>255</length>
    <type>Text</type>
</CustomField>