force-app/main/default/objects/ServiceContractNewMatter__c/fields/CostPay24HoursSupportMonthlyBilling__c.field-meta.xml
<CustomField>
    <fullName>CostPay24HoursSupportMonthlyBilling__c</fullName>
    <label>費用負担_24時間サポート毎月_請求</label>
    <length>255</length>
    <type>Text</type>
</CustomField>