force-app/main/default/objects/ServiceContractNewMatter__c/fields/CostPay24HoursSupportPay__c.field-meta.xml
<CustomField>
    <fullName>CostPay24HoursSupportPay__c</fullName>
    <label>費用負担_24時間サポート_負担</label>
    <length>255</length>
    <type>Text</type>
</CustomField>