force-app/main/default/objects/ServiceContractNewMatter__c/fields/CostPayAtLeaveCleanCost__c.field-meta.xml
<CustomField>
    <fullName>CostPayAtLeaveCleanCost__c</fullName>
    <label>費用負担_退去時清掃代_負担</label>
    <length>255</length>
    <type>Text</type>
</CustomField>