force-app/main/default/objects/ServiceContractNewMatter__c/fields/CostPayAtLeaveCleanCostBilling__c.field-meta.xml
<CustomField>
    <fullName>CostPayAtLeaveCleanCostBilling__c</fullName>
    <label>費用負担_退去時清掃代_請求</label>
    <length>255</length>
    <type>Text</type>
</CustomField>