force-app/main/default/objects/ServiceContractNewMatter__c/fields/CostPayCabletvCost__c.field-meta.xml
<CustomField>
    <fullName>CostPayCabletvCost__c</fullName>
    <label>費用負担_CATV代毎月_負担</label>
    <length>255</length>
    <type>Text</type>
</CustomField>