force-app/main/default/objects/ServiceContractNewMatter__c/fields/CostPayCabletvCostMonthlyBilling__c.field-meta.xml
<CustomField>
    <fullName>CostPayCabletvCostMonthlyBilling__c</fullName>
    <label>費用負担_CATV代毎月_請求</label>
    <length>255</length>
    <type>Text</type>
</CustomField>