force-app/main/default/objects/ServiceContractNewMatter__c/fields/CostPayIcLockBilling__c.field-meta.xml
<CustomField>
    <fullName>CostPayIcLockBilling__c</fullName>
    <label>費用負担_ICロック_請求</label>
    <length>255</length>
    <type>Text</type>
</CustomField>