force-app/main/default/objects/ServiceContractNewMatter__c/fields/CostPayKeyExchangeCostOption__c.field-meta.xml
<CustomField>
    <fullName>CostPayKeyExchangeCostOption__c</fullName>
    <label>費用負担_鍵交換代任意_負担</label>
    <length>255</length>
    <type>Text</type>
</CustomField>