force-app/main/default/objects/ServiceContractNewMatter__c/fields/CostPayKeyExchangeCostOptionBilling__c.field-meta.xml
<CustomField>
    <fullName>CostPayKeyExchangeCostOptionBilling__c</fullName>
    <label>費用負担_鍵交換代任意_請求</label>
    <length>255</length>
    <type>Text</type>
</CustomField>