force-app/main/default/objects/ServiceContractNewMatter__c/fields/CostPayOther2__c.field-meta.xml
<CustomField>
    <fullName>CostPayOther2__c</fullName>
    <label>費用負担_その他2毎月_負担</label>
    <length>255</length>
    <type>Text</type>
</CustomField>