force-app/main/default/objects/ServiceContractNewMatter__c/fields/CostPayOtherColumn__c.field-meta.xml
<CustomField>
    <fullName>CostPayOtherColumn__c</fullName>
    <label>費用負担_その他欄</label>
    <length>255</length>
    <type>Text</type>
</CustomField>