force-app/main/default/objects/ServiceContractNewMatter__c/fields/CostPaySinkAreaSterilizationAtMove__c.field-meta.xml
<CustomField>
    <fullName>CostPaySinkAreaSterilizationAtMove__c</fullName>
    <label>費用負担_水廻り消毒入居時_負担</label>
    <length>255</length>
    <type>Text</type>
</CustomField>