force-app/main/default/objects/ServiceContractNewMatter__c/fields/CostPaySinkAreaSterilizationMoveBilling__c.field-meta.xml
<CustomField>
    <fullName>CostPaySinkAreaSterilizationMoveBilling__c</fullName>
    <label>費用負担_水廻り消毒入居時_請求</label>
    <length>255</length>
    <type>Text</type>
</CustomField>