force-app/main/default/objects/ServiceContractNewMatter__c/fields/CostPaySterilizationOption__c.field-meta.xml
<CustomField>
    <fullName>CostPaySterilizationOption__c</fullName>
    <label>費用負担_入居前消毒任意_負担</label>
    <length>255</length>
    <type>Text</type>
</CustomField>