force-app/main/default/objects/ServiceContractNewMatter__c/fields/CostPaySterilizationOptionBilling__c.field-meta.xml
<CustomField>
    <fullName>CostPaySterilizationOptionBilling__c</fullName>
    <label>費用負担_入居前消毒任意_請求</label>
    <length>255</length>
    <type>Text</type>
</CustomField>