force-app/main/default/objects/ServiceContractNewMatter__c/fields/CostPayStoveCleanAtMove__c.field-meta.xml
<CustomField>
    <fullName>CostPayStoveCleanAtMove__c</fullName>
    <label>費用負担_ストーブ清掃入居時_負担</label>
    <length>255</length>
    <type>Text</type>
</CustomField>