force-app/main/default/objects/ServiceContractNewMatter__c/fields/CostPayTownshipFeeBilling__c.field-meta.xml
<CustomField>
    <fullName>CostPayTownshipFeeBilling__c</fullName>
    <label>費用負担_町内法費_請求</label>
    <length>255</length>
    <type>Text</type>
</CustomField>