force-app/main/default/objects/ServiceContractNewMatter__c/fields/CostPayTownshipFeeMonthlyPay__c.field-meta.xml
<CustomField>
    <fullName>CostPayTownshipFeeMonthlyPay__c</fullName>
    <label>費用負担_町内会費毎月_負担</label>
    <length>255</length>
    <type>Text</type>
</CustomField>