force-app/main/default/objects/ServiceContractNewMatter__c/fields/DefectInquiryWebSite__c.field-meta.xml
<CustomField>
    <fullName>DefectInquiryWebSite__c</fullName>
    <label>WEB不具合問い合わせ先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>