force-app/main/default/objects/ServiceContractNewMatter__c/fields/DummyDate1__c.field-meta.xml
<CustomField>
    <fullName>DummyDate1__c</fullName>
    <label>ダミー日付1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>