force-app/main/default/objects/ServiceContractNewMatter__c/fields/DummyDate2__c.field-meta.xml
<CustomField>
    <fullName>DummyDate2__c</fullName>
    <label>ダミー日付2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>