force-app/main/default/objects/ServiceContractNewMatter__c/fields/DummyText1__c.field-meta.xml
<CustomField>
    <fullName>DummyText1__c</fullName>
    <label>ダミーテキスト1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>