force-app/main/default/objects/ServiceContractNewMatter__c/fields/EmployeeContactNecessity__c.field-meta.xml
<CustomField>
    <fullName>EmployeeContactNecessity__c</fullName>
    <label>社員連絡要否</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>