force-app/main/default/objects/ServiceContractNewMatter__c/fields/FacilitySymbol__c.field-meta.xml
<CustomField>
    <fullName>FacilitySymbol__c</fullName>
    <label>設備記号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>