force-app/main/default/objects/ServiceContractNewMatter__c/fields/FacilityTerms__c.field-meta.xml
<CustomField>
    <fullName>FacilityTerms__c</fullName>
    <label>設備条件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>