force-app/main/default/objects/ServiceContractNewMatter__c/fields/FacilityTermsReceiveCall__c.field-meta.xml
<CustomField>
    <fullName>FacilityTermsReceiveCall__c</fullName>
    <label>設備条件_受電</label>
    <length>255</length>
    <type>Text</type>
</CustomField>