force-app/main/default/objects/ServiceContractNewMatter__c/fields/FeasibilityJointGuarantorReceiveCall__c.field-meta.xml
<CustomField>
    <fullName>FeasibilityJointGuarantorReceiveCall__c</fullName>
    <label>連帯保証人の可否_受電</label>
    <length>255</length>
    <type>Text</type>
</CustomField>