force-app/main/default/objects/ServiceContractNewMatter__c/fields/FireInsurance__c.field-meta.xml
<CustomField>
    <fullName>FireInsurance__c</fullName>
    <label>火災保険</label>
    <length>255</length>
    <type>Text</type>
</CustomField>