force-app/main/default/objects/ServiceContractNewMatter__c/fields/FireInsuranceReceiveCall__c.field-meta.xml
<CustomField>
    <fullName>FireInsuranceReceiveCall__c</fullName>
    <label>火災保険_受電</label>
    <length>255</length>
    <type>Text</type>
</CustomField>