force-app/main/default/objects/ServiceContractNewMatter__c/fields/FivePointRegulationGuidanceDocument__c.field-meta.xml
<CustomField>
    <fullName>FivePointRegulationGuidanceDocument__c</fullName>
    <label>五点依頼時規定案内書類</label>
    <length>255</length>
    <type>Text</type>
</CustomField>