force-app/main/default/objects/ServiceContractNewMatter__c/fields/FloorPlanRegulation__c.field-meta.xml
<CustomField>
    <fullName>FloorPlanRegulation__c</fullName>
    <label>間取規定</label>
    <length>255</length>
    <type>Text</type>
</CustomField>