force-app/main/default/objects/ServiceContractNewMatter__c/fields/FloorPlanSymbol__c.field-meta.xml
<CustomField>
    <fullName>FloorPlanSymbol__c</fullName>
    <label>間取記号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>