force-app/main/default/objects/ServiceContractNewMatter__c/fields/GarageAtContractCorporationPayment__c.field-meta.xml
<CustomField>
    <fullName>GarageAtContractCorporationPayment__c</fullName>
    <label>Ｐ契約時法人支払</label>
    <length>255</length>
    <type>Text</type>
</CustomField>