force-app/main/default/objects/ServiceContractNewMatter__c/fields/GarageConfirmContent11__c.field-meta.xml
<CustomField>
    <fullName>GarageConfirmContent11__c</fullName>
    <label>駐車場ご確認内容_11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>