force-app/main/default/objects/ServiceContractNewMatter__c/fields/GarageConfirmContent13__c.field-meta.xml
<CustomField>
    <fullName>GarageConfirmContent13__c</fullName>
    <label>駐車場ご確認内容_13</label>
    <length>255</length>
    <type>Text</type>
</CustomField>