force-app/main/default/objects/ServiceContractNewMatter__c/fields/GarageConfirmMatter13__c.field-meta.xml
<CustomField>
    <fullName>GarageConfirmMatter13__c</fullName>
    <label>駐車場ご確認事項_13</label>
    <length>255</length>
    <type>Text</type>
</CustomField>