force-app/main/default/objects/ServiceContractNewMatter__c/fields/GarageConfirmReplyChoice13__c.field-meta.xml
<CustomField>
    <fullName>GarageConfirmReplyChoice13__c</fullName>
    <label>駐車場ご確認回答選択_13</label>
    <length>255</length>
    <type>Text</type>
</CustomField>