force-app/main/default/objects/ServiceContractNewMatter__c/fields/GarageNoteMatter__c.field-meta.xml
<CustomField>
    <fullName>GarageNoteMatter__c</fullName>
    <label>Ｐ注意事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>