force-app/main/default/objects/ServiceContractNewMatter__c/fields/GarageReceiveCall__c.field-meta.xml
<CustomField>
    <fullName>GarageReceiveCall__c</fullName>
    <label>駐車場_受電</label>
    <length>255</length>
    <type>Text</type>
</CustomField>