force-app/main/default/objects/ServiceContractNewMatter__c/fields/GarageSelfContract__c.field-meta.xml
<CustomField>
    <fullName>GarageSelfContract__c</fullName>
    <label>Ｐ個人契約</label>
    <length>255</length>
    <type>Text</type>
</CustomField>