force-app/main/default/objects/ServiceContractNewMatter__c/fields/InquiryDestinationEmailAdress__c.field-meta.xml
<CustomField>
    <fullName>InquiryDestinationEmailAdress__c</fullName>
    <label>問い合わせ先メールアドレス</label>
    <length>255</length>
    <type>Text</type>
</CustomField>