force-app/main/default/objects/ServiceContractNewMatter__c/fields/InsuranceApplicationForm__c.field-meta.xml
<CustomField>
    <fullName>InsuranceApplicationForm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>保険申込書</label>
    <type>Checkbox</type>
</CustomField>