force-app/main/default/objects/ServiceContractNewMatter__c/fields/InsuranceContractor__c.field-meta.xml
<CustomField>
    <fullName>InsuranceContractor__c</fullName>
    <label>保険名義</label>
    <length>255</length>
    <type>Text</type>
</CustomField>