force-app/main/default/objects/ServiceContractNewMatter__c/fields/InsuranceJoinContent__c.field-meta.xml
<CustomField>
    <fullName>InsuranceJoinContent__c</fullName>
    <label>保険加入内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>