force-app/main/default/objects/ServiceContractNewMatter__c/fields/InsuranceNoteMatter__c.field-meta.xml
<CustomField>
    <fullName>InsuranceNoteMatter__c</fullName>
    <label>保険注意事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>