force-app/main/default/objects/ServiceContractNewMatter__c/fields/InsuranceProcess__c.field-meta.xml
<CustomField>
    <fullName>InsuranceProcess__c</fullName>
    <label>保険処理</label>
    <length>255</length>
    <type>Text</type>
</CustomField>