force-app/main/default/objects/ServiceContractNewMatter__c/fields/InsuranceSpecifyDestination__c.field-meta.xml
<CustomField>
    <fullName>InsuranceSpecifyDestination__c</fullName>
    <label>保険指定先名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>