force-app/main/default/objects/ServiceContractNewMatter__c/fields/IsApplicantConfirm__c.field-meta.xml
<CustomField>
    <fullName>IsApplicantConfirm__c</fullName>
    <label>適用者確認要否</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>要</fullName>
                <default>true</default>
                <label>要</label>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>