force-app/main/default/objects/ServiceContractNewMatter__c/fields/IsApplicationFormRequest__c.field-meta.xml
<CustomField>
    <fullName>IsApplicationFormRequest__c</fullName>
    <label>申請書依頼可否</label>
    <length>255</length>
    <type>Text</type>
</CustomField>