force-app/main/default/objects/ServiceContractNewMatter__c/fields/IsAutoCreateRecord__c.field-meta.xml
<CustomField>
    <fullName>IsAutoCreateRecord__c</fullName>
    <defaultValue>true</defaultValue>
    <label>コード自動作成対象</label>
    <type>Checkbox</type>
</CustomField>