force-app/main/default/objects/ServiceContractNewMatter__c/fields/IsAutoMediationRequest__c.field-meta.xml
<CustomField>
    <fullName>IsAutoMediationRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>斡旋自動対応不可フラグ</label>
    <type>Checkbox</type>
</CustomField>