force-app/main/default/objects/ServiceContractNewMatter__c/fields/IsCancelNotice__c.field-meta.xml
<CustomField>
    <fullName>IsCancelNotice__c</fullName>
    <label>解約予告マーク</label>
    <length>255</length>
    <type>Text</type>
</CustomField>