force-app/main/default/objects/ServiceContractNewMatter__c/fields/IsCompanyOwnedCorporateHousingStep__c.field-meta.xml
<CustomField>
    <fullName>IsCompanyOwnedCorporateHousingStep__c</fullName>
    <label>社有社宅対応有無</label>
    <length>255</length>
    <type>Text</type>
</CustomField>