force-app/main/default/objects/ServiceContractNewMatter__c/fields/IsContractMoneyRegulation__c.field-meta.xml
<CustomField>
    <fullName>IsContractMoneyRegulation__c</fullName>
    <label>契約金規定マーク</label>
    <length>255</length>
    <type>Text</type>
</CustomField>