force-app/main/default/objects/ServiceContractNewMatter__c/fields/IsContractUnavailable__c.field-meta.xml
<CustomField>
    <fullName>IsContractUnavailable__c</fullName>
    <label>契約不可マーク</label>
    <length>255</length>
    <type>Text</type>
</CustomField>