force-app/main/default/objects/ServiceContractNewMatter__c/fields/IsDecisionContactFormTrader__c.field-meta.xml
<CustomField>
    <fullName>IsDecisionContactFormTrader__c</fullName>
    <label>決定連絡書_業者フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>