force-app/main/default/objects/ServiceContractNewMatter__c/fields/IsEmployeeReply__c.field-meta.xml
<CustomField>
    <fullName>IsEmployeeReply__c</fullName>
    <label>社員の返信要否</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>