force-app/main/default/objects/ServiceContractNewMatter__c/fields/IsFacilityTerms__c.field-meta.xml
<CustomField>
    <fullName>IsFacilityTerms__c</fullName>
    <label>設備条件マーク</label>
    <length>255</length>
    <type>Text</type>
</CustomField>