force-app/main/default/objects/ServiceContractNewMatter__c/fields/IsFireInsurance__c.field-meta.xml
<CustomField>
    <fullName>IsFireInsurance__c</fullName>
    <label>火災保険マーク</label>
    <length>255</length>
    <type>Text</type>
</CustomField>