force-app/main/default/objects/ServiceContractNewMatter__c/fields/IsFloorPlanRegulation__c.field-meta.xml
<CustomField>
    <fullName>IsFloorPlanRegulation__c</fullName>
    <label>間取規定マーク</label>
    <length>255</length>
    <type>Text</type>
</CustomField>