force-app/main/default/objects/ServiceContractNewMatter__c/fields/IsJointGuarantorJointGuarantor__c.field-meta.xml
<CustomField>
    <fullName>IsJointGuarantorJointGuarantor__c</fullName>
    <label>連帯保証人可否マーク</label>
    <length>255</length>
    <type>Text</type>
</CustomField>