force-app/main/default/objects/ServiceContractNewMatter__c/fields/IsLocationRegulation__c.field-meta.xml
<CustomField>
    <fullName>IsLocationRegulation__c</fullName>
    <label>立地規定マーク</label>
    <length>255</length>
    <type>Text</type>
</CustomField>