force-app/main/default/objects/ServiceContractNewMatter__c/fields/IsMediationCancelOnHold__c.field-meta.xml
<CustomField>
    <fullName>IsMediationCancelOnHold__c</fullName>
    <label>斡旋解約保留可否</label>
    <length>255</length>
    <type>Text</type>
</CustomField>