force-app/main/default/objects/ServiceContractNewMatter__c/fields/IsRequestNewGenerallyEmail__c.field-meta.xml
<CustomField>
    <fullName>IsRequestNewGenerallyEmail__c</fullName>
    <label>依頼新規通常メールフラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>