force-app/main/default/objects/ServiceContractNewMatter__c/fields/IsSpecifyTrader__c.field-meta.xml
<CustomField>
    <fullName>IsSpecifyTrader__c</fullName>
    <label>指定業者あり</label>
    <length>255</length>
    <type>Text</type>
</CustomField>