force-app/main/default/objects/ServiceContractNewMatter__c/fields/IsTestEmailMandatory__c.field-meta.xml
<CustomField>
    <fullName>IsTestEmailMandatory__c</fullName>
    <label>テストメール必須フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>