force-app/main/default/objects/ServiceContractNewMatter__c/fields/JointGuarantorBylawComment__c.field-meta.xml
<CustomField>
    <fullName>JointGuarantorBylawComment__c</fullName>
    <label>連帯保証内規コメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>