force-app/main/default/objects/ServiceContractNewMatter__c/fields/JointGuarantorFeasibility__c.field-meta.xml
<CustomField>
    <fullName>JointGuarantorFeasibility__c</fullName>
    <label>連帯保証人の可否</label>
    <length>255</length>
    <type>Text</type>
</CustomField>