force-app/main/default/objects/ServiceContractNewMatter__c/fields/JointGuarantorSymbol__c.field-meta.xml
<CustomField>
    <fullName>JointGuarantorSymbol__c</fullName>
    <label>連帯保証人記号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>