force-app/main/default/objects/ServiceContractNewMatter__c/fields/KeyExchangeSymbol__c.field-meta.xml
<CustomField>
    <fullName>KeyExchangeSymbol__c</fullName>
    <label>鍵交換記号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>