force-app/main/default/objects/ServiceContractNewMatter__c/fields/KtSystemFeasibility__c.field-meta.xml
<CustomField>
    <fullName>KtSystemFeasibility__c</fullName>
    <label>ktシステムの可否</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>可</fullName>
            </value>
            <value>
                <fullName>不可</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>