force-app/main/default/objects/ServiceContractNewMatter__c/fields/LeaveApplicationForm__c.field-meta.xml
<CustomField>
    <fullName>LeaveApplicationForm__c</fullName>
    <label>退去申請書名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>