force-app/main/default/objects/ServiceContractNewMatter__c/fields/LocationBylawComment__c.field-meta.xml
<CustomField>
    <fullName>LocationBylawComment__c</fullName>
    <label>立地内規コメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>