force-app/main/default/objects/ServiceContractNewMatter__c/fields/MandatoryConfirmDecision__c.field-meta.xml
<CustomField>
    <fullName>MandatoryConfirmDecision__c</fullName>
    <label>決定時必須確認</label>
    <length>255</length>
    <type>Text</type>
</CustomField>