force-app/main/default/objects/ServiceContractNewMatter__c/fields/MediationAtArrangeComment1__c.field-meta.xml
<CustomField>
    <fullName>MediationAtArrangeComment1__c</fullName>
    <label>斡旋手配時コメント１</label>
    <length>255</length>
    <type>Text</type>
</CustomField>