force-app/main/default/objects/ServiceContractNewMatter__c/fields/MediationBeforehandCheckRegulation__c.field-meta.xml
<CustomField>
    <fullName>MediationBeforehandCheckRegulation__c</fullName>
    <label>斡旋事前チェック規定</label>
    <length>255</length>
    <type>Text</type>
</CustomField>