force-app/main/default/objects/ServiceContractNewMatter__c/fields/MediationCancelSelfReasons__c.field-meta.xml
<CustomField>
    <fullName>MediationCancelSelfReasons__c</fullName>
    <label>斡旋解約自己都合</label>
    <length>255</length>
    <type>Text</type>
</CustomField>