force-app/main/default/objects/ServiceContractNewMatter__c/fields/MediationOtherDecisionUnnecessary__c.field-meta.xml
<CustomField>
    <fullName>MediationOtherDecisionUnnecessary__c</fullName>
    <label>斡旋他決不要</label>
    <length>255</length>
    <type>Text</type>
</CustomField>