force-app/main/default/objects/ServiceContractNewMatter__c/fields/MediationRule__c.field-meta.xml
<CustomField>
    <fullName>MediationRule__c</fullName>
    <label>斡旋ルール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>