force-app/main/default/objects/ServiceContractNewMatter__c/fields/MediationRuleUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>MediationRuleUpdateDate__c</fullName>
    <label>斡旋ルール更新日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>